--- a/chess.css
+++ b/chess.css
@@ -111,10 +111,10 @@ img{
 	width: 60px;
 	height: 60px;
 }
-#endscene{
+.scene{
 	position: relative;
-	display: none;
 	opacity: 0;
+	display: none;
 	z-index: 1;
 }
 .overlay{
@@ -122,9 +122,10 @@ img{
 	width: 100%;
 	height: 100%;
 	background: #000;
-	opacity: .5;
+	opacity: .7;
+	z-index: 1;
 }
-#endscene p{
+.scene .scene-content{
 	position: fixed;
 	color:#fff;
 	z-index: 2;
@@ -132,12 +133,22 @@ img{
     text-align: center;
     margin-top: 40vh;
     font-size: 40px;
+	height: 100vh;
+}
+.scene-content h2 {
+	font-weight: 500;
+	margin-bottom: 15px;
 }
 .show{
 	display: block !important;
 	animation: showMessage 1s ease-out;
 	animation-fill-mode: both;
 }
+
+.hidden {
+	display: none;
+}
+
 @keyframes showMessage { 
   0% {
   	opacity: 0;
@@ -162,4 +173,48 @@ img{
     background: #7f979e;
     color: white;
     border: 0;
+}
+
+
+input[type="radio"] {
+	display: none;
+}
+label {
+	background-color: rgb(112,112,112);
+	position: relative;
+	font-family: "Poppins", sans-serif;
+	cursor: pointer;
+	display: inline-flex;
+	align-items: center;
+	gap: 0.8em;
+	padding: 1em 2em;
+	border-radius: 0.5em;
+	font-size: 23px;
+}
+
+input[type="radio"]:checked + label {
+	background-color: #4189e0;
+	color: #ffffff;
+}
+
+.button {
+	background-color: rgb(112,112,112);
+	border-radius: 10px;
+	border: none;
+	color: white;
+	padding: 20px 40px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 20px;
+	cursor: pointer;
+}
+
+.button:hover, label:hover {
+	background-color: rgb(160, 160, 160);
+}
+
+.button-big {
+	padding: 30px 60px;
+	font-size: 25px;
 }
